--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     .section {
       margin-bottom: 25px;
     }
+    .result-box {
+      min-height: 40px;
+      border: 1px dashed #ccc;
+      padding: 10px;
+      background-color: #f9f9f9;
+    }
   </style>
 </head>
 <body>
@@ -71,26 +77,26 @@
 
     <div class="section">
       <label>Datos del Conductor</label>
-      <div style="min-height: 40px; border: 1px dashed #ccc; padding: 10px; background-color: #f9f9f9;">
+      <div class="result-box" id="datos-conductor">
         <!-- Aquí se mostrarán datos traídos desde la planilla de Google -->
       </div>
     </div>
 
     <div class="section">
       <label for="numero-equipo">Ingrese Número de Equipo</label>
-      <input type="text" id="numero-equipo" placeholder="Ej: 00123" />
+      <input type="text" id="numero-equipo" placeholder="Ej: 00123" onblur="buscarFamiliaEquipo()" />
     </div>
 
     <div class="section">
-      <label>Datos del Equipo</label>
-      <div style="min-height: 40px; border: 1px dashed #ccc; padding: 10px; background-color: #f9f9f9;">
-        <!-- Aquí se mostrarán datos traídos desde la planilla de Google -->
+      <label>Familia del Equipo</label>
+      <div class="result-box" id="familia-equipo">
+        <!-- Aquí se mostrará la familia del equipo -->
       </div>
     </div>
 
     <div class="section">
       <label>¿Habilitado para Ingreso?</label>
-      <div style="min-height: 40px; border: 1px dashed #ccc; padding: 10px; background-color: #f9f9f9;">
+      <div class="result-box">
         <!-- Aquí se mostrará estado desde la planilla -->
       </div>
     </div>
@@ -112,6 +118,32 @@
       document.getElementById("datetime").innerText = now.toLocaleDateString('es-CL', opciones);
     }
     actualizarFechaHora();
+
+    async function buscarFamiliaEquipo() {
+      const input = document.getElementById("numero-equipo").value.trim();
+      const contenedor = document.getElementById("familia-equipo");
+
+      if (!input) {
+        contenedor.innerText = "";
+        return;
+      }
+
+      contenedor.innerText = "Buscando...";
+
+      try {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbxjq5W7zHMAdseMsxXwcl0VP7FtNedbhCaPj7b0gwftQ_iYQdJ-4iOv9jgrQTK47-Ad3w/exec?id=" + encodeURIComponent(input));
+        const data = await response.json();
+
+        if (data.error) {
+          contenedor.innerText = "❌ No encontrado";
+        } else {
+          contenedor.innerText = data.FAMILIA || "(sin información)";
+        }
+      } catch (error) {
+        contenedor.innerText = "❌ Error en la consulta";
+        console.error(error);
+      }
+    }
   </script>
 </body>
 </html>
