--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
     </div>
 
     <div class="section">
+      <label>Observaciones</label>
+      <div class="result-box" id="observaciones-equipo"></div>
+    </div>
+
+    <div class="section">
       <label for="guardia">Guardia quien fiscaliza</label>
       <input type="text" id="guardia" placeholder="Nombre del guardia" />
     </div>
@@ -140,15 +145,18 @@
       const id = document.getElementById("numero-equipo").value.trim();
       const contenedorFamilia = document.getElementById("familia-equipo");
       const contenedorStatus = document.getElementById("status-equipo");
+      const contenedorObs = document.getElementById("observaciones-equipo");
 
       if (!id) {
         contenedorFamilia.innerText = "";
         contenedorStatus.innerText = "";
+        contenedorObs.innerText = "";
         return;
       }
 
       contenedorFamilia.innerText = "Buscando...";
       contenedorStatus.innerText = "Buscando...";
+      contenedorObs.innerText = "Buscando...";
 
       try {
         const response = await fetch("https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec?tipo=equipo&id=" + encodeURIComponent(id));
@@ -157,13 +165,16 @@
         if (data.error) {
           contenedorFamilia.innerText = "❌ No encontrado";
           contenedorStatus.innerText = "❌ No encontrado";
+          contenedorObs.innerText = "❌ No encontrado";
         } else {
           contenedorFamilia.innerText = data.FAMILIA || "(sin dato)";
           contenedorStatus.innerText = data["STATUS ✎"] || "(sin estado)";
+          contenedorObs.innerText = data.OBSERVACIONES || "(sin observaciones)";
         }
       } catch (error) {
         contenedorFamilia.innerText = "❌ Error";
         contenedorStatus.innerText = "❌ Error";
+        contenedorObs.innerText = "❌ Error";
         console.error(error);
       }
     }
