--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom, #e3f2fd, #bbdefb);
-      color: #0d47a1;
+      background: linear-gradient(to bottom, #2b2b2b, #1a1a1a);
+      color: #e0e0e0;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -17,18 +17,18 @@
       transition: all 0.3s ease-in-out;
     }
     .container {
-      background-color: #ffffff;
+      background-color: #333;
       padding: 30px;
       border-radius: 18px;
-      box-shadow: 0 8px 20px rgba(13, 71, 161, 0.2);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
       max-width: 600px;
       width: 100%;
-      border: 1px solid #bbdefb;
+      border: 1px solid #555;
       transition: all 0.4s ease;
     }
     h1 {
       font-size: 24px;
-      color: #0d47a1;
+      color: #fff;
       text-align: center;
       margin-bottom: 25px;
     }
@@ -36,7 +36,7 @@
       display: block;
       margin-top: 16px;
       font-weight: bold;
-      color: #1565c0;
+      color: #ddd;
       transition: color 0.3s ease;
     }
     input, textarea {
@@ -44,40 +44,42 @@
       padding: 10px;
       margin-top: 6px;
       border-radius: 6px;
-      border: 1px solid #90caf9;
+      border: 1px solid #666;
       font-size: 14px;
-      background-color: #f1f8ff;
+      background-color: #1e1e1e;
+      color: #fff;
       transition: all 0.3s ease;
     }
     input:focus, textarea:focus {
       outline: none;
-      border-color: #42a5f5;
-      box-shadow: 0 0 0 2px #90caf988;
-      background-color: #e3f2fd;
+      border-color: #999;
+      box-shadow: 0 0 0 2px #8884;
+      background-color: #2a2a2a;
     }
     .datetime-box {
-      background-color: #e3f2fd;
-      border: 1px solid #90caf9;
+      background-color: #444;
+      border: 1px solid #666;
       padding: 12px;
       text-align: center;
       border-radius: 8px;
       margin-bottom: 20px;
       font-weight: bold;
+      color: #f0f0f0;
     }
     .section {
       margin-bottom: 25px;
     }
     .result-box {
       min-height: 40px;
-      border: 1px dashed #90caf9;
+      border: 1px dashed #666;
       padding: 10px;
-      background-color: #f9f9f9;
-      color: #0d47a1;
+      background-color: #1a1a1a;
+      color: #eee;
       border-radius: 6px;
       transition: all 0.3s ease;
     }
     .btn {
-      background-color: #1976d2;
+      background-color: #c62828;
       color: #fff;
       border: none;
       padding: 12px 20px;
@@ -89,7 +91,7 @@
       margin-top: 20px;
     }
     .btn:hover {
-      background-color: #0d47a1;
+      background-color: #b71c1c;
       transform: scale(1.02);
     }
   </style>
