--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       border: 1px solid #555;
       transition: all 0.4s ease;
     }
+    .logo {
+      display: block;
+      margin: 0 auto 20px;
+      max-width: 140px;
+      filter: drop-shadow(0 0 3px rgba(255,255,255,0.1));
+    }
     h1 {
       font-size: 24px;
       color: #fff;
@@ -98,6 +104,7 @@
 </head>
 <body>
   <div class="container">
+    <img class="logo" src="https://raw.githubusercontent.com/acciona-airport/Zarpes-acciona-aero/main/LogoAcciona2.png" alt="Logo Acciona" />
     <h1>Formulario de Ingreso de Equipos</h1>
 
     <div class="datetime-box" id="datetime"></div>
