--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <div class="section">
       <label for="rut-conductor">Ingrese RUT del conductor que ingresa <small>(Formato: 123456789-1)</small></label>
-      <input type="text" id="rut-conductor" placeholder="Ej: 123456789-1" onblur="buscarDatosConductor()" />
+      <input type="text" id="rut-conductor" placeholder="Ingrese RUT sin puntos y con guion." onblur="buscarDatosConductor()" />
     </div>
 
     <div class="section">
@@ -121,7 +121,7 @@
 
     <div class="section">
       <label for="numero-equipo">Ingrese Número de Equipo</label>
-      <input type="text" id="numero-equipo" placeholder="Ej: 00123" onblur="buscarDatosEquipo()" />
+      <input type="text" id="numero-equipo" placeholder="Ej: 51125" onblur="buscarDatosEquipo()" />
     </div>
 
     <div class="section">
