--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ingreso de Equipos - Acciona</title>
   <style>
     body {
@@ -14,7 +14,6 @@
       align-items: center;
       padding: 30px 15px;
       margin: 0;
-      transition: all 0.3s ease-in-out;
     }
     .container {
       background-color: #333;
@@ -24,7 +23,6 @@
       max-width: 600px;
       width: 100%;
       border: 1px solid #555;
-      transition: all 0.4s ease;
     }
     .logo {
       display: block;
@@ -43,7 +41,6 @@
       margin-top: 16px;
       font-weight: bold;
       color: #ddd;
-      transition: color 0.3s ease;
     }
     input, textarea {
       width: 100%;
@@ -54,13 +51,6 @@
       font-size: 14px;
       background-color: #1e1e1e;
       color: #fff;
-      transition: all 0.3s ease;
-    }
-    input:focus, textarea:focus {
-      outline: none;
-      border-color: #999;
-      box-shadow: 0 0 0 2px #8884;
-      background-color: #2a2a2a;
     }
     .datetime-box {
       background-color: #444;
@@ -82,7 +72,6 @@
       background-color: #1a1a1a;
       color: #eee;
       border-radius: 6px;
-      transition: all 0.3s ease;
     }
     .btn {
       background-color: #c62828;
@@ -161,26 +150,16 @@
     async function buscarDatosConductor() {
       const rut = document.getElementById("rut-conductor").value.trim();
       const contenedor = document.getElementById("datos-conductor");
-
-      if (!rut) {
-        contenedor.innerText = "";
-        return;
-      }
+      if (!rut) return contenedor.innerText = "";
 
       contenedor.innerText = "Buscando...";
-
       try {
         const response = await fetch("https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec?tipo=personal&id=" + encodeURIComponent(rut));
         const data = await response.json();
-
-        if (data.error) {
-          contenedor.innerText = "❌ No encontrado";
-        } else {
-          contenedor.innerText = data.NOMBRE || "(sin nombre registrado)";
-        }
-      } catch (error) {
+        contenedor.innerText = data.error ? "❌ No encontrado" : data.NOMBRE || "(sin nombre registrado)";
+      } catch (e) {
         contenedor.innerText = "❌ Error al consultar";
-        console.error(error);
+        console.error(e);
       }
     }
 
@@ -197,33 +176,30 @@
         return;
       }
 
-      contenedorFamilia.innerText = "Buscando...";
-      contenedorStatus.innerText = "Buscando...";
-      contenedorObs.innerText = "Buscando...";
+      contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "Buscando...";
 
       try {
         const response = await fetch("https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec?tipo=equipo&id=" + encodeURIComponent(id));
         const data = await response.json();
 
         if (data.error) {
-          contenedorFamilia.innerText = "❌ No encontrado";
-          contenedorStatus.innerText = "❌ No encontrado";
-          contenedorObs.innerText = "❌ No encontrado";
+          contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "❌ No encontrado";
         } else {
           contenedorFamilia.innerText = data.FAMILIA || "(sin dato)";
-          contenedorStatus.innerText = data["STATUS ✎"] || "(sin estado)";
           contenedorObs.innerText = data.OBSERVACIONES || "(sin observaciones)";
+          const status = (data["STATUS ✎"] || "").trim().toLowerCase();
+          contenedorStatus.innerText = status === "operativo"
+            ? "❌ No habilitado para ingreso"
+            : "✅ Sí habilitado para ingreso";
         }
-      } catch (error) {
-        contenedorFamilia.innerText = "❌ Error";
-        contenedorStatus.innerText = "❌ Error";
-        contenedorObs.innerText = "❌ Error";
-        console.error(error);
+      } catch (e) {
+        contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "❌ Error";
+        console.error(e);
       }
     }
 
     function enviarFormulario() {
-      alert("📨 Datos preparados para envío. (Aquí puedes vincular el envío a Google Sheets si lo deseas)");
+      alert("📨 Datos preparados para envío. Aquí puedes conectar con Google Sheets.");
     }
   </script>
 </body>
