--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       border: 1px solid #555;
     }
     .logo-wrapper {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 20px;
-    }
-    .logo {
-      max-width: 120px;
-      padding: 12px;
-      background-color: rgba(0, 0, 0, 0.4);
-      border: 2px solid rgba(255, 255, 255, 0.1);
-      border-radius: 50%;
-      box-shadow: 0 0 12px rgba(255, 255, 255, 0.08);
-      transition: transform 0.3s ease;
-    }
-    .logo:hover {
-      transform: scale(1.05);
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.logo {
+  max-width: 140px;
+  padding: 8px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.12);
+  border-radius: 12px;
+  box-shadow: 0 0 6px rgba(255, 255, 255, 0.05);
+  transition: transform 0.3s ease;
+}
+.logo:hover {
+  transform: scale(1.03);
     }
     h1 {
       font-size: 24px;
