--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       padding: 8px;
       background-color: rgba(0, 0, 0, 0.3);
       border: 1px solid rgba(255, 255, 255, 0.12);
-      border-radius: 4px;
+      border-radius: 6px;
       box-shadow: 0 0 6px rgba(255, 255, 255, 0.05);
       transition: transform 0.3s ease;
     }
@@ -84,6 +84,16 @@
       color: #eee;
       border-radius: 6px;
     }
+    .alert-box {
+      background-color: #a30000;
+      color: #fff;
+      padding: 12px;
+      border-radius: 6px;
+      font-weight: bold;
+      text-align: center;
+      display: none;
+      margin-top: 10px;
+    }
     .btn {
       background-color: #c62828;
       color: #fff;
@@ -100,9 +110,6 @@
       background-color: #b71c1c;
       transform: scale(1.02);
     }
-    #nombre-manual-section {
-      display: none;
-    }
   </style>
 </head>
 <body>
@@ -117,7 +124,7 @@
 
     <div class="section">
       <label for="rut-conductor">Ingrese RUT del conductor que ingresa <small>(Formato: 123456789-1)</small></label>
-      <input type="text" id="rut-conductor" placeholder="Ingrese RUT sin puntos y con guion." onblur="buscarDatosConductor()" />
+      <input type="text" id="rut-conductor" placeholder="Ingrese RUT sin puntos y con guion." onblur="buscarDatosConductor()" required />
     </div>
 
     <div class="section">
@@ -125,14 +132,14 @@
       <div class="result-box" id="datos-conductor"></div>
     </div>
 
-    <div class="section" id="nombre-manual-section">
+    <div class="section" id="manual-conductor-section" style="display:none;">
       <label for="nombre-manual">Ingrese manualmente nombre del conductor:</label>
-      <input type="text" id="nombre-manual" placeholder="Nombre completo" />
+      <input type="text" id="nombre-manual" placeholder="Nombre completo del conductor" />
     </div>
 
     <div class="section">
       <label for="numero-equipo">Ingrese Número de Equipo:</label>
-      <input type="text" id="numero-equipo" placeholder="Ej: 51125" onblur="buscarDatosEquipo()" />
+      <input type="text" id="numero-equipo" placeholder="Ej: 51125" onblur="buscarDatosEquipo()" required />
     </div>
 
     <div class="section">
@@ -143,6 +150,7 @@
     <div class="section">
       <label>¿Habilitado para Ingreso?</label>
       <div class="result-box" id="status-equipo"></div>
+      <div class="alert-box" id="alerta-ingreso">⚠️ Equipo no habilitado para ingreso. Contacte a Control Flota: +56 9 3860 1767</div>
     </div>
 
     <div class="section">
@@ -152,7 +160,7 @@
 
     <div class="section">
       <label for="guardia">Guardia quien fiscaliza:</label>
-      <input type="text" id="guardia" placeholder="Nombre del guardia" />
+      <input type="text" id="guardia" placeholder="Nombre del guardia" required />
     </div>
 
     <button class="btn" onclick="enviarFormulario()">Enviar</button>
@@ -172,29 +180,30 @@
     async function buscarDatosConductor() {
       const rut = document.getElementById("rut-conductor").value.trim();
       const contenedor = document.getElementById("datos-conductor");
-      const seccionManual = document.getElementById("nombre-manual-section");
+      const manualSection = document.getElementById("manual-conductor-section");
 
       if (!rut) {
         contenedor.innerText = "";
-        seccionManual.style.display = "none";
+        manualSection.style.display = "none";
         return;
       }
 
       contenedor.innerText = "Buscando...";
+
       try {
         const response = await fetch("https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec?tipo=personal&id=" + encodeURIComponent(rut));
         const data = await response.json();
 
-        if (data.error || !data.NOMBRE) {
+        if (data.error) {
           contenedor.innerText = "❌ No encontrado.";
-          seccionManual.style.display = "block";
+          manualSection.style.display = "block";
         } else {
-          contenedor.innerText = data.NOMBRE;
-          seccionManual.style.display = "none";
+          contenedor.innerText = data.NOMBRE || "(sin nombre registrado)";
+          manualSection.style.display = "none";
         }
       } catch (e) {
         contenedor.innerText = "❌ Error al consultar.";
-        seccionManual.style.display = "block";
+        manualSection.style.display = "block";
         console.error(e);
       }
     }
@@ -204,15 +213,18 @@
       const contenedorFamilia = document.getElementById("familia-equipo");
       const contenedorStatus = document.getElementById("status-equipo");
       const contenedorObs = document.getElementById("observaciones-equipo");
+      const alertaIngreso = document.getElementById("alerta-ingreso");
 
       if (!id) {
         contenedorFamilia.innerText = "";
         contenedorStatus.innerText = "";
         contenedorObs.innerText = "";
+        alertaIngreso.style.display = "none";
         return;
       }
 
       contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "Buscando...";
+      alertaIngreso.style.display = "none";
 
       try {
         const response = await fetch("https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec?tipo=equipo&id=" + encodeURIComponent(id));
@@ -224,17 +236,45 @@
           contenedorFamilia.innerText = data.FAMILIA || "(sin dato)";
           contenedorObs.innerText = data.OBSERVACIONES || "(sin observaciones)";
           const status = (data["STATUS ✎"] || "").trim().toLowerCase();
-          contenedorStatus.innerText = status === "operativo"
-            ? "❌ No habilitado para ingreso."
-            : "✅ Sí habilitado para ingreso.";
+          if (status === "operativo") {
+            contenedorStatus.innerText = "❌ No habilitado para ingreso.";
+            alertaIngreso.style.display = "block";
+          } else {
+            contenedorStatus.innerText = "✅ Sí habilitado para ingreso.";
+            alertaIngreso.style.display = "none";
+          }
         }
       } catch (e) {
         contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "❌ Error";
+        alertaIngreso.style.display = "none";
         console.error(e);
       }
     }
 
     function enviarFormulario() {
+      const rut = document.getElementById("rut-conductor").value.trim();
+      const nombreManual = document.getElementById("nombre-manual").value.trim();
+      const datosConductor = document.getElementById("datos-conductor").innerText.trim();
+      const equipo = document.getElementById("numero-equipo").value.trim();
+      const guardia = document.getElementById("guardia").value.trim();
+
+      if (!rut) {
+        alert("⚠️ Debes ingresar el RUT del conductor.");
+        return;
+      }
+      if (datosConductor.includes("No encontrado") && !nombreManual) {
+        alert("⚠️ Si no se encuentra el conductor, debes ingresar su nombre manualmente.");
+        return;
+      }
+      if (!equipo) {
+        alert("⚠️ Debes ingresar el número de equipo.");
+        return;
+      }
+      if (!guardia) {
+        alert("⚠️ Debes ingresar el nombre del guardia que fiscaliza.");
+        return;
+      }
+
       alert("📨 Datos preparados para envío. Aquí puedes conectar con Google Sheets.");
     }
   </script>
