--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
       color: #eee;
       border-radius: 6px;
     }
-    .alert-box {
-      background-color: #a30000;
-      color: #fff;
+    .alerta-roja {
+      background-color: #5a0000;
+      border: 1px solid #ff4444;
+      color: #ffb3b3;
       padding: 12px;
       border-radius: 6px;
+      display: none;
       font-weight: bold;
       text-align: center;
-      display: none;
-      margin-top: 10px;
     }
     .btn {
       background-color: #c62828;
@@ -109,6 +109,21 @@
     .btn:hover {
       background-color: #b71c1c;
       transform: scale(1.02);
+    }
+    .spinner {
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      border: 3px solid #c62828;
+      border-top: 3px solid transparent;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      vertical-align: middle;
+      margin-left: 10px;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
     }
   </style>
 </head>
@@ -150,7 +165,10 @@
     <div class="section">
       <label>¿Habilitado para Ingreso?</label>
       <div class="result-box" id="status-equipo"></div>
-      <div class="alert-box" id="alerta-ingreso">⚠️ Equipo no habilitado para ingreso. Contacte a Control Flota: +56 9 3860 1767</div>
+    </div>
+
+    <div id="alerta-ingreso" class="alerta-roja">
+      ⚠️ Equipo no habilitado para ingreso. Contacte con Control Flota. Teléfono: +56 9 3860 1767
     </div>
 
     <div class="section">
@@ -188,7 +206,7 @@
         return;
       }
 
-      contenedor.innerText = "Buscando...";
+      contenedor.innerHTML = 'Buscando...<span class="spinner"></span>';
 
       try {
         const response = await fetch("https://script.google.com/macros/s/AKfycbx5RL_GDtFwsKcMWyBYLwi2sdXtnkh9eXzdVs73jTS6zt3oAu9dmQwSeiyx43Tkt_QfeQ/exec?tipo=personal&id=" + encodeURIComponent(rut));
@@ -223,7 +241,7 @@
         return;
       }
 
-      contenedorFamilia.innerText = contenedorStatus.innerText = contenedorObs.innerText = "Buscando...";
+      contenedorFamilia.innerHTML = contenedorStatus.innerHTML = contenedorObs.innerHTML = 'Buscando...<span class="spinner"></span>';
       alertaIngreso.style.display = "none";
 
       try {
