--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       font-weight: bold;
       color: #ddd;
     }
-    input {
+    input, textarea {
       width: 100%;
       padding: 10px;
       margin-top: 6px;
@@ -127,7 +127,7 @@
 
     <div class="section">
       <label>Datos del Conductor:</label>
-      <div class="result-box" id="datos-conductor"></div>
+      <div class="result-box" id="datos-conductor">–</div>
     </div>
 
     <div class="section" id="manual-conductor-section" style="display:none;">
@@ -142,12 +142,12 @@
 
     <div class="section">
       <label>Familia del Equipo:</label>
-      <div class="result-box" id="familia-equipo"></div>
+      <div class="result-box" id="familia-equipo">–</div>
     </div>
 
     <div class="section">
       <label>¿Habilitado para Ingreso?</label>
-      <div class="result-box" id="status-equipo"></div>
+      <div class="result-box" id="status-equipo">–</div>
     </div>
 
     <div id="alerta-ingreso" class="alert-box">
@@ -157,7 +157,7 @@
 
     <div class="section">
       <label>Observaciones:</label>
-      <div class="result-box" id="observaciones-equipo"></div>
+      <div class="result-box" id="observaciones-equipo">–</div>
     </div>
 
     <div class="section">
@@ -169,7 +169,7 @@
   </div>
 
   <script>
-    const WEB_APP_URL = "TU_URL_WEB_APP_AQUI"; // ← reemplaza por tu URL real
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwvNQg4ze6sluQH2eKCpWjD0I9V1qbJE2DwBnJYVFLOunSjyhwdgyLwqf_Do8zsJIw4Yg/exec";
 
     function actualizarFechaHora() {
       const now = new Date();
@@ -183,11 +183,12 @@
       const manual = document.getElementById("manual-conductor-section");
 
       if (!rut) return;
-
       contenedor.innerText = "🔴 Buscando...";
+
       try {
-        const res = await fetch(WEB_APP_URL + "?tipo=personal&id=" + encodeURIComponent(rut));
+        const res = await fetch(SCRIPT_URL + "?tipo=personal&id=" + encodeURIComponent(rut));
         const data = await res.json();
+
         if (data.error) {
           contenedor.innerText = "❌ No encontrado.";
           manual.style.display = "block";
@@ -212,7 +213,7 @@
       alerta.style.display = "none";
 
       try {
-        const res = await fetch(WEB_APP_URL + "?tipo=equipo&id=" + encodeURIComponent(id));
+        const res = await fetch(SCRIPT_URL + "?tipo=equipo&id=" + encodeURIComponent(id));
         const data = await res.json();
 
         contFam.innerText = data.FAMILIA || "(sin dato)";
@@ -227,49 +228,43 @@
         }
       } catch (e) {
         contFam.innerText = contStat.innerText = contObs.innerText = "❌ Error";
-        console.error(e);
       }
     }
 
     async function enviarFormulario() {
       const rut = document.getElementById("rut-conductor").value.trim();
-      const nombre = document.getElementById("datos-conductor").innerText.includes("No encontrado")
-                    ? document.getElementById("nombre-manual").value.trim()
-                    : document.getElementById("datos-conductor").innerText.trim();
+      const conductorManual = document.getElementById("nombre-manual").value.trim();
+      const conductorAuto = document.getElementById("datos-conductor").innerText.trim();
       const equipo = document.getElementById("numero-equipo").value.trim();
       const familia = document.getElementById("familia-equipo").innerText.trim();
-      const habilitado = document.getElementById("status-equipo").innerText.trim();
+      const status = document.getElementById("status-equipo").innerText.trim();
       const obs = document.getElementById("observaciones-equipo").innerText.trim();
       const guardia = document.getElementById("guardia").value.trim();
 
+      const nombre = conductorAuto.includes("No encontrado") ? conductorManual : conductorAuto;
+
       if (!rut || !nombre || !equipo || !guardia) {
-        alert("⚠️ Completa todos los campos obligatorios.");
+        alert("⚠️ Debes completar todos los campos obligatorios.");
         return;
       }
 
-      const formData = new URLSearchParams();
-      formData.append("rut", rut);
-      formData.append("nombre", nombre);
-      formData.append("equipo", equipo);
-      formData.append("familia", familia);
-      formData.append("habilitado", habilitado);
-      formData.append("observaciones", obs);
-      formData.append("guardia", guardia);
+      const payload = {
+        rut, nombre, equipo, familia,
+        habilitado: status,
+        observaciones: obs,
+        guardia
+      };
 
       try {
-        const res = await fetch(WEB_APP_URL, {
+        const res = await fetch(SCRIPT_URL, {
           method: "POST",
-          headers: { "Content-Type": "application/x-www-form-urlencoded" },
-          body: formData.toString()
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload)
         });
 
-        const text = await res.text();
-        if (text.trim() === "OK") {
-          alert("✅ Datos enviados correctamente.");
-          location.reload();
-        } else {
-          alert("❌ Error en el servidor: " + text);
-        }
+        const result = await res.text();
+        alert("✅ Datos enviados correctamente.");
+        location.reload();
       } catch (e) {
         alert("❌ Error al enviar.");
         console.error(e);
