--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <div class="section">
       <label>Datos del Conductor:</label>
-      <div class="result-box" id="datos-conductor">–</div>
+      <div class="result-box" id="datos-conductor"></div>
     </div>
 
     <div class="section" id="manual-conductor-section" style="display:none;">
@@ -142,12 +142,12 @@
 
     <div class="section">
       <label>Familia del Equipo:</label>
-      <div class="result-box" id="familia-equipo">–</div>
+      <div class="result-box" id="familia-equipo"></div>
     </div>
 
     <div class="section">
       <label>¿Habilitado para Ingreso?</label>
-      <div class="result-box" id="status-equipo">–</div>
+      <div class="result-box" id="status-equipo"></div>
     </div>
 
     <div id="alerta-ingreso" class="alert-box">
@@ -157,7 +157,7 @@
 
     <div class="section">
       <label>Observaciones:</label>
-      <div class="result-box" id="observaciones-equipo">–</div>
+      <div class="result-box" id="observaciones-equipo"></div>
     </div>
 
     <div class="section">
@@ -169,7 +169,8 @@
   </div>
 
   <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwvNQg4ze6sluQH2eKCpWjD0I9V1qbJE2DwBnJYVFLOunSjyhwdgyLwqf_Do8zsJIw4Yg/exec";
+    const URL_GET = "https://script.google.com/macros/s/AKfycbw7KeNf_nNwkwonok5c70IjEa6AvIgGyie60x_IeDWxPzI-QGvaQodJYxJtstS5RwswIg/exec";
+    const URL_POST = "https://script.google.com/macros/s/AKfycbweYsW1oeEQVblyphJbJnn6CppScWLSGw-0UfXmYpMzsDgHTDo-3CpVZsghPgfVt6icaQ/exec";
 
     function actualizarFechaHora() {
       const now = new Date();
@@ -183,12 +184,11 @@
       const manual = document.getElementById("manual-conductor-section");
 
       if (!rut) return;
+
       contenedor.innerText = "🔴 Buscando...";
-
       try {
-        const res = await fetch(SCRIPT_URL + "?tipo=personal&id=" + encodeURIComponent(rut));
+        const res = await fetch(`${URL_GET}?tipo=personal&id=${encodeURIComponent(rut)}`);
         const data = await res.json();
-
         if (data.error) {
           contenedor.innerText = "❌ No encontrado.";
           manual.style.display = "block";
@@ -199,6 +199,7 @@
       } catch (e) {
         contenedor.innerText = "❌ Error.";
         manual.style.display = "block";
+        console.error(e);
       }
     }
 
@@ -213,7 +214,7 @@
       alerta.style.display = "none";
 
       try {
-        const res = await fetch(SCRIPT_URL + "?tipo=equipo&id=" + encodeURIComponent(id));
+        const res = await fetch(`${URL_GET}?tipo=equipo&id=${encodeURIComponent(id)}`);
         const data = await res.json();
 
         contFam.innerText = data.FAMILIA || "(sin dato)";
@@ -228,45 +229,49 @@
         }
       } catch (e) {
         contFam.innerText = contStat.innerText = contObs.innerText = "❌ Error";
+        console.error(e);
       }
     }
 
     async function enviarFormulario() {
       const rut = document.getElementById("rut-conductor").value.trim();
-      const conductorManual = document.getElementById("nombre-manual").value.trim();
-      const conductorAuto = document.getElementById("datos-conductor").innerText.trim();
+      const nombre = document.getElementById("datos-conductor").innerText.includes("No encontrado")
+        ? document.getElementById("nombre-manual").value.trim()
+        : document.getElementById("datos-conductor").innerText.trim();
       const equipo = document.getElementById("numero-equipo").value.trim();
       const familia = document.getElementById("familia-equipo").innerText.trim();
       const status = document.getElementById("status-equipo").innerText.trim();
       const obs = document.getElementById("observaciones-equipo").innerText.trim();
       const guardia = document.getElementById("guardia").value.trim();
 
-      const nombre = conductorAuto.includes("No encontrado") ? conductorManual : conductorAuto;
-
-      if (!rut || !nombre || !equipo || !guardia) {
-        alert("⚠️ Debes completar todos los campos obligatorios.");
+      if (!rut || !equipo || !guardia || !nombre) {
+        alert("⚠️ Completa todos los campos obligatorios.");
         return;
       }
 
-      const payload = {
-        rut, nombre, equipo, familia,
-        habilitado: status,
-        observaciones: obs,
-        guardia
-      };
+      const formData = new FormData();
+      formData.append("rut", rut);
+      formData.append("nombre", nombre);
+      formData.append("equipo", equipo);
+      formData.append("familia", familia);
+      formData.append("habilitado", status);
+      formData.append("observaciones", obs);
+      formData.append("guardia", guardia);
 
       try {
-        const res = await fetch(SCRIPT_URL, {
+        const res = await fetch(URL_POST, {
           method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload)
+          body: formData
         });
-
-        const result = await res.text();
-        alert("✅ Datos enviados correctamente.");
-        location.reload();
+        const text = await res.text();
+        if (text.includes("OK")) {
+          alert("✅ Datos enviados correctamente.");
+          location.reload();
+        } else {
+          alert("❌ Error al enviar.");
+        }
       } catch (e) {
-        alert("❌ Error al enviar.");
+        alert("❌ Error al conectar con el servidor.");
         console.error(e);
       }
     }
